--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: 🚀 Deploy website on push
 
 on:
   push:
-    branches: [v3]
+    branches: [master]
   pull_request:
-    branches: [v3]
+    branches: [master]
 
 jobs:
   build:
@@ -16,7 +16,13 @@ jobs:
 
     steps:
       - name: 🚚 Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'yarn'
 
       - name: 🔨 Build Project
         run: |
