--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
 
+      - name: ⏬ install Project
+        run: yarn
+
       - name: 🔨 Build Project
-        run: |
-          yarn
-          yarn build
+        run: yarn build
 
       - name: List output files
         run: find out/ -print
