--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,4 @@ jobs:
           server: 141.95.193.28
           username: flamboyant-bohr_i9ndl2am7r
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: out/
+          local-dir: httpdocs/
