--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev ",
+    "dev": "next dev",
     "build": "next build && next export",
-    "start": "next start",
+    "serve": "next serve",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "sass": "^1.50.1"
   },
   "devDependencies": {
